# VibeHapticDesigner

./: .gitignore  .gitmodules  Prompt.md  README.md  index.html  mario.html  play_haptic_audio.py  play_system_audio_haptics.py  pyproject.toml  リアルタイム触覚生成仕様書_完全版.md
android/: build.gradle.kts  gradle.properties  gradlew.bat  local.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/vibehapticdesigner/: DesignerScreen.kt  GeminiApi.kt  HapticEngine.kt  MainActivity.kt
android/app/src/main/res/values/: strings.xml  themes.xml
scripts/: bootstrap.ps1  bootstrap.sh  play_haptic_audio.py  play_system_audio_haptics.py
src/vibe_haptic_designer/adapters/: pydualsense_adapter.py
src/vibe_haptic_designer/application/: session.py
src/vibe_haptic_designer/domain/: models.py  ports.py
src/vibe_haptic_designer/interfaces/cli/: main.py
tests/: test_models.py
